name:                chatter
version:             0.2.0.1
synopsis:            A library of simple NLP algorithms.
description:         chatter is a collection of simple Natural Language
                     Processing algorithms.
                     .
                     Chatter supports:
                     .
                     * Part of speech tagging with Averaged
                       Perceptrons. Based on the Python implementation
                       by Matthew Honnibal:
                       (<http://honnibal.wordpress.com/2013/09/11/a-good-part-of-speechpos-tagger-in-about-200-lines-of-python/>) See 'NLP.POS' for the details of part-of-speech tagging with chatter.
                     .
                     * Document similarity; A cosine-based similarity measure, and TF-IDF calculations,
                       are available in the 'NLP.Similarity.VectorSim' module.
                     .
                     * Information Extraction patterns via (<http://www.haskell.org/haskellwiki/Parsec/>) Parsec
homepage:            http://github.com/creswick/chatter
Bug-Reports:         http://github.com/creswick/chatter/issues
category:            Natural language processing
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.10
build-type:          Simple

data-files:          ./data/models/README
                     ./data/models/brown-train.model.gz

source-repository head
  type:     git
  location: git://github.com/creswick/chatter.git

Library
   default-language: Haskell2010
   hs-source-dirs:   src

   Other-modules:    Paths_chatter

   Exposed-modules:  NLP.POS
                     NLP.POS.AvgPerceptron
                     NLP.POS.AvgPerceptronTagger
                     NLP.POS.LiteralTagger
                     NLP.POS.UnambiguousTagger
                     NLP.Types
                     NLP.Corpora.Parsing
                     NLP.Corpora.Email
                     NLP.Similarity.VectorSim
                     NLP.Extraction.Parsec
                     NLP.Extraction.Examples.ParsecExamples
                     Data.DefaultMap

   Build-depends:    base >= 4 && <= 6,
                     text >= 0.11.3.0,
                     containers >= 0.5.0.0,
                     safe >= 0.3.3,
                     random-shuffle >= 0.0.4,
                     MonadRandom >= 0.1.2,
                     cereal >= 0.4.0.1,
                     fullstop >= 0.1.3.1,
                     split >= 0.1.2.3,
                     bytestring >= 0.10.0.0,
                     directory,
                     mbox,
                     zlib >= 0.5.4.1,
                     filepath >= 1.3.0.1,
                     ghc-prim,
                     deepseq,
                     tokenize >= 0.2.0,
                     parsec >= 3.1.5,
                     transformers,
                     regex-base,
                     regex-tdfa >= 1.2.0,
                     regex-tdfa-text,
                     array


   ghc-options:      -Wall


Executable tag
   default-language: Haskell2010
   Main-Is:          Tagger.hs
   hs-source-dirs:   appsrc

   Build-depends:    chatter,
                     filepath >= 1.3.0.1,
                     text >= 0.11.3.0,
                     base >= 4 && <= 6,
                     bytestring >= 0.10.0.0,
                     cereal >= 0.4.0.1

   ghc-options:      -Wall -main-is Tagger -rtsopts

Executable train
   default-language: Haskell2010
   Main-Is:          Trainer.hs
   hs-source-dirs:   appsrc

   Build-depends:    chatter,
                     filepath >= 1.3.0.1,
                     text >= 0.11.3.0,
                     base >= 4 && <= 6,
                     bytestring >= 0.10.0.0,
                     cereal >= 0.4.0.1,
                     containers >= 0.5.0.0

   ghc-options:      -Wall -main-is Trainer -rtsopts

Executable eval
   default-language: Haskell2010
   Main-Is:          Evaluate.hs
   hs-source-dirs:   appsrc

   Build-depends:    chatter,
                     filepath >= 1.3.0.1,
                     text >= 0.11.3.0,
                     base >= 4 && <= 6,
                     bytestring >= 0.10.0.0,
                     cereal >= 0.4.0.1,
                     containers >= 0.5.0.0

   ghc-options:      -Wall -main-is Evaluate -rtsopts

benchmark bench
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   Main-Is:          Bench.hs
   hs-source-dirs:   tests/src

   Other-modules:    NLP.Similarity.VectorSimBench
                     Corpora

   Build-depends:    chatter,
                     criterion >= 0.8.0.1,
                     filepath >= 1.3.0.1,
                     text >= 0.11.3.0,
                     base       >= 4 && <= 6,
                     deepseq,
                     split >= 0.1.2.3,
                     tokenize >= 0.2.0

   ghc-options:      -Wall -main-is Bench


test-suite tests
   default-language: Haskell2010
   type: exitcode-stdio-1.0

   Main-Is:          Main.hs
   hs-source-dirs:   tests/src

   Other-modules:    AvgPerceptronTests
                     BackoffTaggerTests
                     NLP.Similarity.VectorSimTests
                     NLP.POSTests
                     NLP.POS.UnambiguousTaggerTests
                     NLP.Extraction.ParsecTests
                     NLP.TypesTests
                     Data.DefaultMapTests
                     Corpora
                     TestUtils
                     IntegrationTests

   Build-depends:    chatter,
                     base       >= 4 && <= 6,
                     text,
                     HUnit,
                     parsec >= 3.1.5,
                     test-framework,
                     test-framework-skip,
                     test-framework-quickcheck2,
                     test-framework-hunit,
                     tokenize,
                     QuickCheck < 2.6,
                     filepath,
                     cereal,
                     quickcheck-instances,
                     containers

   ghc-options:      -Wall
