name:                hpostag
version:             0.0.0.1
synopsis:            A simple POS tagger library
description:         <<<description>>>
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.10
build-type:          Simple

Flag tests
   Description:    Build the tests
   Default:        False

Library
   default-language: Haskell2010
   hs-source-dirs:   src

   Exposed-modules:  NLP.POS
                     NLP.POS.AvgPerceptron
                     NLP.POS.AvgPerceptronTagger
                     NLP.Types
                     NLP.Corpora.Parsing

   Build-depends:    base >= 4,
                     text,
                     containers,
                     safe,
                     random-shuffle,
                     MonadRandom

   ghc-options:      -Wall

Executable hpostag
   default-language: Haskell2010
   Main-Is:          Main.hs
   hs-source-dirs:   appsrc

   Build-depends:    hpostag,
                     base       >= 4

   ghc-options:      -Wall

test-suite tests
   default-language: Haskell2010
   type: exitcode-stdio-1.0

   Main-Is:          Main.hs
   hs-source-dirs:   tests/src

   Build-depends:    hpostag,
                     base       >= 4,
                     text,
                     HUnit,
                     test-framework,
                     test-framework-skip,
                     test-framework-quickcheck2,
                     test-framework-hunit,
                     QuickCheck < 2.6,
                     filepath

   ghc-options:      -Wall
