name:                hpostag
version:             0.0.0.1
synopsis:            A simple POS tagger library
description:         <<<description>>>
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.10
build-type:          Simple

Flag tests
   Description:    Build the tests
   Default:        False

Library
   default-language: Haskell2010
   hs-source-dirs:   src

   Exposed-modules:  NLP.POS
                     NLP.POS.AvgPerceptron
                     NLP.POS.AvgPerceptronTagger
                     NLP.Types
                     NLP.Corpora.Parsing

   Build-depends:    base >= 4,
                     text,
                     containers,
                     safe,
                     random-shuffle,
                     MonadRandom,
                     cereal

   ghc-options:      -Wall


Executable tag
   default-language: Haskell2010
   Main-Is:          Tagger.hs
   hs-source-dirs:   appsrc

   Build-depends:    hpostag,
                     filepath,
                     text,
                     base       >= 4,
                     bytestring,
                     cereal

   ghc-options:      -Wall -main-is Tagger -O2 -rtsopts -prof -auto-all

Executable train
   default-language: Haskell2010
   Main-Is:          Trainer.hs
   hs-source-dirs:   appsrc

   Build-depends:    hpostag,
                     filepath,
                     text,
                     base       >= 4,
                     bytestring,
                     cereal

   ghc-options:      -Wall -main-is Trainer -O2 -rtsopts -prof -auto-all

Executable bench
   default-language: Haskell2010
   Main-Is:          Bench.hs
   hs-source-dirs:   tests/src

   Build-depends:    hpostag,
                     criterion,
                     filepath,
                     text,
                     base       >= 4

   ghc-options:      -Wall -main-is Bench


test-suite tests
   default-language: Haskell2010
   type: exitcode-stdio-1.0

   Main-Is:          Main.hs
   hs-source-dirs:   tests/src

   Build-depends:    hpostag,
                     base       >= 4,
                     text,
                     HUnit,
                     test-framework,
                     test-framework-skip,
                     test-framework-quickcheck2,
                     test-framework-hunit,
                     QuickCheck < 2.6,
                     filepath,
                     cereal,
                     quickcheck-instances,
                     containers

   ghc-options:      -Wall
